# trust-payout-calculator

./: CMakeLists.txt
include/trust/: base.h  grat_inputs.h  payout_table.h
include/trust/grat/: calculator.h  inputs.h  outputs.h
src/: grat_calc.cpp
test/: CMakeLists.txt  grat_calc.cpp
